kubernetes/apps/cloudflare-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflare-gateway-profile
spec:
  selector:
    app: cloudflare-gateway-profile
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
